--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@
 
 
 
-# Do similar for other three images```
-```bash
+# Do similar for other three images
+# ```
+# ```bash
 # Push
 # Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
