--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+language: node_js
+
+services:
+  - docker
+  
 # Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
 # Use either `docker-compose` or individual `docker build` commands
 # Build
