--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
 # Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
 # Use either `docker-compose` or individual `docker build` commands
 # Build
+
+script:
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-frontend ./udagram-frontend
@@ -26,6 +28,7 @@ services:
 # Push
 # Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   #- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  
   - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
  # - docker push sudkul/udagram-api-feed:v1
